--- a/views/gatos.ejs
+++ b/views/gatos.ejs
@@ -1,11 +1,14 @@
-<h1>Gatos</h1>
-<nav>
-    <a href="/">Home</a>
-    <a href="/gatos">Gatos</a>
-    <a href="/sobre">Sobre</a>
-</nav>
-<ul>
-    <li>Siamês</li>
-    <li>Persa</li>
-    <li>Vira Lata</li>
-</ul>
+<!DOCTYPE html>
+<html lang="en">
+<%- include('shared/head') %>
+<body>
+    <%- include('shared/header') %>
+    <h1>Gatos</h1>
+    
+    <ul>
+        <li>Siamês</li>
+        <li>Persa</li>
+        <li>Vira Lata</li>
+    </ul>
+</body>
+</html>
