--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,18 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Rent-a-Cat</title>
-</head>
+<%- include('shared/head') %>
 <body>
-    <link rel="stylesheet" href="/styles.css">
+    <%- include('shared/header') %>
     <h1>Bem vindo ao Rent-a-Cat</h1>
-    <nav>
-        <a href="/">Home</a>
-        <a href="/gatos">Gatos</a>
-        <a href="/sobre">Sobre</a>
-    </nav>
+    
 </body>
 </html>
