--- a/views/shared/header.ejs
+++ b/views/shared/header.ejs
@@ -1,5 +1,9 @@
 <header>
-    <h1>Rent-a-Cat</h1>
+    <div>
+        <img src="/static/logo.png" alt="">
+        <h1> Rent-a-Cat</h1>
+    </div>
+    
     <nav>
         <a href="/">Home</a>
         <a href="/gatos">Gatos</a>
