--- a/views/gatos.ejs
+++ b/views/gatos.ejs
@@ -3,12 +3,26 @@
 <%- include('shared/head') %>
 <body>
     <%- include('shared/header') %>
-    <h1>Gatos</h1>
-    
-    <ul>
-        <li>Siamês</li>
-        <li>Persa</li>
-        <li>Vira Lata</li>
-    </ul>
+    <section class="gatos">
+        <h2>Gatos para Locação</h2>
+        
+        <div class="container">
+            <div>
+                <img src="/static/gato-1.jpg" alt="">
+                <h3>Pombas</h3>
+            </div>
+            
+            <div>
+                <img src="/static/gato-1.jpg" alt="">
+                <h3>Pombas</h3>
+            </div>
+            
+            <div>
+                <img src="/static/gato-1.jpg" alt="">
+                <h3>Pombas</h3>
+            </div>
+        </div>
+        
+    </section>
 </body>
 </html>
