Adicionar tratamento de dados de formulário

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,11 +9,11 @@
             <img src="/static/banner.jpg" alt="">
         </div>
         
-        <form action="">
+        <form method="POST" action="/">
             <h2>Entre em contato:</h2>
-            <input type="text" placeholder="nome">
-            <input type="text" placeholder="email">
-            <textarea rows="10" placeholder="mensagem"></textarea>
+            <input type="text" placeholder="nome" name="nome">
+            <input type="text" placeholder="email" name="email">
+            <textarea rows="10" placeholder="mensagem" name="mensagem"></textarea>
             
             <button>Enviar</button>
         </form>
