--- a/views/gatos.ejs
+++ b/views/gatos.ejs
@@ -9,7 +9,7 @@
         <div class="container">
             <% for(let gato of gatos){ %>
                 <div>
-                    <img src="<%= gato.img %>" alt="">
+                    <img src="/static/<%= gato.img %>" alt="">
                     <h3><%= gato.nome %></h3>
                 </div>
             <% } %>
