--- a/views/admin-gatos-inserir.ejs
+++ b/views/admin-gatos-inserir.ejs
@@ -5,6 +5,8 @@
     <section>
         <h2>Gatos</h2>
         
+        <h3><%= mensagem %></h3>
+
         <form method="POST">
             <label>Nome</label>
             <input type="text" name="nome">
